--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "cors": "^2.8.5",
     "dockerode": "^4.0.2",
     "express": "^4.19.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "truecallerjs": "^2.2.0"
   },
   "name": "we4devs",
   "description": "",
