--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "dependencies": {
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dockerode": "^4.0.2",
     "express": "^4.19.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "nodemon": "^3.1.0"
   },
   "name": "we4devs",
   "description": "",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./Backend/main.js"
   },
   "author": "",
   "license": "ISC"
