fix: package.json

--- a/package.json
+++ b/package.json
@@ -2,24 +2,16 @@
   "dependencies": {
     "axios": "^1.6.8",
     "cors": "^2.8.5",
-<<<<<<< HEAD
     "crypto": "^1.0.1",
-=======
     "discord": "^0.8.2",
     "discord.js": "^14.14.1",
->>>>>>> 5b18b531fabf49771e7dfea3d1674d2db69bf377
     "dockerode": "^4.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "node-fetch": "^3.3.2",
-<<<<<<< HEAD
-    "nodemon": "^3.1.0"
-=======
-    "truecallerjs": "^2.2.0"
-    "node-fetch": "^3.3.2",
+    "truecallerjs": "^2.2.0",
     "nodemon": "^3.1.0",
     "request": "^2.88.2"
->>>>>>> 5b18b531fabf49771e7dfea3d1674d2db69bf377
   },
   "name": "we4devs",
   "description": "",
