--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "node-fetch": "^3.3.2",
-    "truecallerjs": "^2.2.0",
     "nodemon": "^3.1.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "truecallerjs": "^2.2.0"
   },
   "name": "we4devs",
   "description": "",
