--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,7 +14,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.3"
+    "react-portal": "^4.2.2",
+    "react-router-dom": "^6.22.3",
+    "truecallerjs": "^2.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
