--- a/SpamModel/requirements.txt
+++ b/SpamModel/requirements.txt
@@ -1,2 +1,26 @@
-Flask==2.0.2
-transformers==4.13.0
+blinker==1.7.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+docker==7.0.0
+filelock==3.13.3
+Flask==3.0.2
+fsspec==2024.3.1
+huggingface-hub==0.22.1
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+numpy==1.26.4
+packaging==24.0
+python-dotenv==1.0.1
+PyYAML==6.0.1
+regex==2023.12.25
+requests==2.31.0
+safetensors==0.4.2
+tokenizers==0.15.2
+tqdm==4.66.2
+transformers==4.39.1
+typing_extensions==4.10.0
+urllib3==2.2.1
+Werkzeug==3.0.1
