--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.19.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.0",
+    "path": "^0.12.7",
     "request": "^2.88.2",
     "truecallerjs": "^2.2.0"
   },
