docker v1.24 used remove instead of autoremove in docker run

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ networks:
 
 services:
   backend:
-    image: we4devs-server
+    image: smitbutle/we4devs-server
     container_name: backend
     env_file: ./Server/.env
     expose:
