--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,10 +20,10 @@ services:
     build:
       context: ./Frontend
       args:
-        - VITE_HOST=http://0.0.0.0:6273
+        - VITE_HOST=http://localhost:6273
     container_name: frontend
     environment:
-      - VITE_HOST=http://0.0.0.0:6273
+      - VITE_HOST=http://localhost:6273
     ports:
       - "6173:5200"
     depends_on:
